tests/macros/password/choices.stderr
error: option `choices` does not exist for kind `password`
 --> $DIR/choices.rs:2:38
  |
2 |     requestty::questions![Password { choices: todo!() }];
  |                                      ^^^^^^^
