tests/macros/password/choices.rs
fn main() {
    requestty::questions![Password { choices: todo!() }];
}
